--- a/poltavvagon/catalog/templates/main/index.html
+++ b/poltavvagon/catalog/templates/main/index.html
@@ -3,3 +3,47 @@
 {% load thumbnail %}
 {% load static %}
 
+{% block banner %}
+
+
+
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <ol class="carousel-indicators">
+
+            {% for banner in banners %}
+                {% if forloop.first %}
+                    <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to={{ banner.index }} class="active"></li>
+                {% else %}
+                    <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to={{ banner.index }} ></li>
+                {% endif %}
+            {% endfor %}
+        </ol>
+
+        <div class="carousel-inner">
+            {% for banner in banners %}
+                {% if forloop.first %}
+                    <div class="carousel-item active">
+                {% else %}
+                     <div class="carousel-item ">
+                {% endif %}
+
+                    <img src="media/{{ banner.image }}" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                    <h5>{{ banner.name }}</h5>
+                    <p>{{ banner.body }}</p>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </a>
+    </div>
+ </div>
+{% endblock %}
