--- a/poltavvagon/catalog/templates/main/index.html
+++ b/poltavvagon/catalog/templates/main/index.html
@@ -31,6 +31,7 @@
                     <div class="carousel-caption d-none d-md-block">
                     <h5 class="banner-text">{{ banner.name }}</h5>
                     <p class="banner-text">{{ banner.body }}</p>
+                    <a href="{{ banner.url }}"><button type="button" class="btn btn-outline-light">Детальнее</button></a>
                 </div>
             </div>
             {% endfor %}
