закончен футтер, обновлена модель каталог, добавил тег для футтера

--- a/poltavvagon/catalog/static/catalog/css/style.css
+++ b/poltavvagon/catalog/static/catalog/css/style.css
@@ -82,3 +82,11 @@ a {
     padding: 10px 0;
     color: whitesmoke;
 }
+
+.contact-footer{
+    padding: 8px 4px;
+}
+
+.about-us{
+    padding: 80px;
+}
