--- a/poltavvagon/catalog/templates/main/index.html
+++ b/poltavvagon/catalog/templates/main/index.html
@@ -79,27 +79,39 @@
 
     <sections class="our-production">
 
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-5 col-lg-6">
-                    <img src="{% static 'catalog/image/vagon_more.jpg' %}" alt="about" class="img-fluid full-width">
-                </div>
-                <div class="col-xl-7 col-lg-6 align-self-center">
-
-                    <div class="about-left-side p-relative">
-                        <div class="section-header">
-                            <div class="section-heading">
-                                <h3 class="text-theme fw-700" style="padding: 25px; font-size: xx-large">О компании</h3>
-                            </div>
-                        </div>
-                        <div class="about-desc">
-                            <p class="text-light-white mb-xl-20" style="text-align: justify">ООО «Полтаввагон» - украинское производственное предприятие, которое ведет свою деятельность в сфере производства продукции для газодобывающей, нефтедобывающей, нефтехимической и другой промышленности и на данный момент выполняется процедура по постановке на производство вагоностроительной продукции, которую планируется завершить в этом году. Для этого уже изготовлено и прошли испытания с положительным заключением два опытных образца вагона-цистерны для растительных масел модели 15-1755П и вагон-цистерна для нефтепродуктов модели 15-1755.</p>
-                        </div>
-                    </div>
-
+        <div class="container head-prod">
+            <div class="row justify-content-center">
+                <div class="col-8 text-center">
+                    <h2>Наша продукция</h2>
                 </div>
             </div>
         </div>
+
+        <div class="container">
+            <div class="row row-cols-1 row-cols-md-2 g-4">
+                <div class="col">
+                    <div class="card">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                    </div>
+                </div>
+
+
+  <div class="col">
+    <div class="card">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+    </div>
+  </div>
+</div>
+        </div>
+
     </sections>
 
      <sections class="our-services">
