--- a/poltavvagon/catalog/static/catalog/css/style.css
+++ b/poltavvagon/catalog/static/catalog/css/style.css
@@ -27,6 +27,21 @@ a {
     padding-right: 20px;
 }
 
+a.card-catalog{
+    color: black;
+}
+
+.card-size{
+    height: 500px;
+}
+.card-image{
+    width: 100%;
+    height: 300px;
+
+    min-width: 100%;
+    object-fit: cover;
+}
+
 .col-topbar{
     padding: 0px 10px 0px 10px;
 }
