--- a/poltavvagon/catalog/templates/main/index.html
+++ b/poltavvagon/catalog/templates/main/index.html
@@ -88,39 +88,82 @@
         </div>
 
         <div class="container">
-            <div class="row row-cols-1 row-cols-md-2 g-4">
-                <div class="col">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                {% for production in production_category %}
+                    <div class="col">
+                        <a style="color: black" href="{% url 'by_production' slug=production.slug %}">
+                        <div class="card card-size">
+                            <img src="media/{{ production.image }}" class="card-img-top card-image" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">{{ production.category_name }}</h5>
+                                <p class="card-text">{{ production.prev_text }}</p>
+                            </div>
                         </div>
+                        </a>
                     </div>
-                </div>
-
-
-  <div class="col">
-    <div class="card">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      </div>
-    </div>
-  </div>
-</div>
+                {% endfor %}
+            </div>
         </div>
 
     </sections>
 
-     <sections class="our-services">
+    <sections class="our-services">
+
+        <div class="container head-prod">
+            <div class="row justify-content-center">
+                <div class="col-8 text-center">
+                    <h2>Услуги</h2>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                {% for service in services %}
+                    <div class="col">
+                        <a style="color: black" href="{% url 'by_services' slug=service.slug %}">
+                        <div class="card card-size">
+                            <img src="media/{{ service.image }}" class="card-img-top card-image" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">{{ service.name_services }}</h5>
+                                <p class="card-text">{{ service.article }}</p>
+                            </div>
+                        </div>
+                        </a>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
 
     </sections>
 
 
     <section class="news">
 
+        <div class="container head-prod">
+            <div class="row justify-content-center">
+                <div class="col-8 text-center">
+                    <h2>Последние новости</h2>
+                </div>
+            </div>
+        </div>
+{#        <div class="container">#}
+{#            <div class="row row-cols-1 row-cols-md-3 g-4">#}
+{#                {% for service in services %}#}
+{#                    <div class="col">#}
+{#                        <a style="color: black" href="{% url 'by_services' slug=service.slug %}">#}
+{#                        <div class="card card-size">#}
+{#                            <img src="media/{{ service.image }}" class="card-img-top card-image" alt="...">#}
+{#                            <div class="card-body">#}
+{#                                <h5 class="card-title">{{ service.name_services }}</h5>#}
+{#                                <p class="card-text">{{ service.article }}</p>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                        </a>#}
+{#                    </div>#}
+{#                {% endfor %}#}
+{#            </div>#}
+{#        </div>#}
     </section>
 
 {% endblock %}
