--- a/poltavvagon/catalog/templates/layout/footer.html
+++ b/poltavvagon/catalog/templates/layout/footer.html
@@ -15,7 +15,7 @@
 
                     </div>
                     <div class="col-md-3">
-                        <h4>Послуги</h4>
+                        <h4>Услуги</h4>
 
                            {% for service in services %}
                                     <div class="col-md-auto offset-md-auto col-topbar contact-footer"><a class="text-custom-white" href="{% url 'by_services' slug=service.slug %}">{{ service.name_services }}</a></div>
