добавленна страница О компании

--- a/poltavvagon/catalog/templates/main/about.html
+++ b/poltavvagon/catalog/templates/main/about.html
@@ -1,3 +1,21 @@
 {% extends 'layout/basic.html' %}
 
+{% load static %}
 {% block title %}О пердприятии{% endblock %}
+
+{% block content %}
+    <div class="container-fluid" style="padding: 0">
+        <img  style="height: 300px" src="{% static 'catalog/image/contact.jpg' %}" class="img-fluid static-banner" alt="...">
+        <div class="static-banner-text"><h2>О предприятии</h2></div>
+    </div>
+
+    <div class="container" style="padding: 80px 0 80px 0; min-height: 700px">
+        ООО «Полтаввагон» - украинское производственное предприятие, которое ведет свою деятельность в сфере
+        производства продукции для газодобывающей, нефтедобывающей, нефтехимической и другой промышленности и на данный
+        момент выполняется процедура по постановке на производство вагоностроительной продукции, которую планируется
+        завершить в этом году. Для этого уже изготовлено и прошли испытания с положительным заключением два опытных
+        образца вагона-цистерны для растительных масел модели 15-1755П и вагон-цистерна для нефтепродуктов модели
+        15-1755.
+    </div>
+
+{% endblock %}
