--- a/poltavvagon/catalog/templates/main/category_tank.html
+++ b/poltavvagon/catalog/templates/main/category_tank.html
@@ -27,7 +27,7 @@
                     <div class="card-body">
                         <h5 class="card-title">{{ item.name }}</h5>
                         <p class="card-text">{{ item.prev_text }}</p>
-                        <a href="/#" class="btn btn-secondary btn-lg" tabindex="-1" role="button" aria-disabled="true">Подробнее</a>
+                        <a href="{% url 'rezervyar' slug=item.slug %}" class="btn btn-secondary btn-lg" tabindex="-1" role="button" aria-disabled="true">Подробнее</a>
                     </div>
                 </div>
             {% endfor %}
