добавил несколько анимаций

--- a/poltavvagon/catalog/templates/layout/navbar.html
+++ b/poltavvagon/catalog/templates/layout/navbar.html
@@ -7,7 +7,7 @@
                    <img src="{% static 'catalog/image/logo-small.png' %}" width="70" height="70"
                         class="d-inline-block align-middle" alt="LOGO" loading="lazy">
                 </a>
-                <a class="navbar-brand brand-text justify-content-md-left align-middle" href="/" >ПОЛТАВВАГОН</a>
+                <a class="navbar-brand brand-text justify-content-md-left align-middle focus-in-expand" href="/" >ПОЛТАВВАГОН</a>
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
