--- a/poltavvagon/catalog/templates/main/tank.html
+++ b/poltavvagon/catalog/templates/main/tank.html
@@ -8,6 +8,70 @@
 
 {% block content %}
 
+
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+			<h3>{{ tank.name }}</h3>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-4">
+            <div class="cssSlider">
+	            <ul class="slides">
+                    <li id="slide1"><img src="https://images.unsplash.com/photo-1483653364400-eedcfb9f1f88?auto=format&fit=crop&w=840&q=60" alt="" /></li>
+                    <li id="slide2"><img src="https://images.unsplash.com/photo-1433256392503-913cee5877e3?auto=format&fit=crop&w=840&q=60" alt="" /></li>
+                    <li id="slide3"><img src="https://images.unsplash.com/photo-1483653085484-eb63c9f02547?auto=format&fit=crop&w=840&q=60" alt="" /></li>
+                    <li id="slide4"><img src="https://images.unsplash.com/photo-1480714378408-67cf0d13bc1b?auto=format&fit=crop&w=840&q=60" alt="" /></li>
+                    <li id="slide5"><img src="https://images.unsplash.com/photo-1453284441168-8780c9f52097?auto=format&fit=crop&w=840&q=60" alt="" /></li>
+	            </ul>
+                <ul class="thumbnails">
+                    <li><a href="#slide1"><img src="https://images.unsplash.com/photo-1483653364400-eedcfb9f1f88?auto=format&fit=crop&w=840&q=60" /></a></li>
+                    <li><a href="#slide2"><img src="https://images.unsplash.com/photo-1433256392503-913cee5877e3?auto=format&fit=crop&w=840&q=60" /></a></li>
+                    <li><a href="#slide3"><img src="https://images.unsplash.com/photo-1483653085484-eb63c9f02547?auto=format&fit=crop&w=840&q=60" /></a></li>
+                    <li><a href="#slide4"><img src="https://images.unsplash.com/photo-1480714378408-67cf0d13bc1b?auto=format&fit=crop&w=840&q=60" /></a></li>
+                    <li><a href="#slide5"><img src="https://images.unsplash.com/photo-1453284441168-8780c9f52097?auto=format&fit=crop&w=840&q=60" /></a></li>
+                </ul>
+            </div>
+		</div>
+		<div class="col-md-8">
+			<p>
+                {{ tank.prev_text }}
+			</p>
+
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12">
+			<div class="tabbable" id="tabs-941065">
+				<ul class="nav nav-tabs">
+					<li class="nav-item">
+						<a class="nav-link" href="#tab1" data-bs-toggle="tab">Описание</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link active show" href="#tab2" data-bs-toggle="tab">Характеристики</a>
+					</li>
+				</ul>
+				<div class="tab-content">
+					<div class="tab-pane active" id="tab1">
+						<p>
+                            {{ tank.description }}
+						</p>
+					</div>
+					<div class="tab-pane" id="tab2">
+						<p>
+							Howdy, I'm in Section 2.
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+
+
     {{ tank.max_operating_temperature }}
 
     {% for image in additional_image %}
